K8s_springboot-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: my-java-app
        image: 499199586988.dkr.ecr.ap-southeast-1.amazonaws.com/testpro:latest
        imagePullPolicy: Always
        resources:
          requests:
          memory: "50Mi"
        limits:
          memory: "100Mi"
        ports:
        - containerPort: 8084
# service type NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-svc
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8084
  type: NodePort
