K8sspringboot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        -
          image: 499199586988.dkr.ecr.ap-southeast-1.amazonaws.com/testpro:latest
          imagePullPolicy: Always
          name: my-java-app
          ports:
            -
              containerPort: 8084
          resources:
            limits:
              cpu: 500m
              memory: 3000Mi
            requests:
              cpu: 250m
              memory: 1000Mi
      imagePullSecrets:
        -
          name: regcred01
# service type NodePort
---
apiVersion: v1
kind: Service
metadata: 
  name: default-http-backed
spec: 
  ports: 
    - 
      port:80
      targetPort: 8084  
  selector: 
    app: java-app
  type: NodePort
# HPA config
