javaappingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: springbootjavaapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kltf.co.uk
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: java-app-svc
            port: 
              number: 8080
